--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /SecureWallet/SecureWallet/Resources/Resource.Designer.cs
 /SecureWallet/SecureWallet/bin/Debug
 /SecureWallet/SecureWallet/obj/.cache
+/SecureWallet/.vs/SecureWallet/v14
