--- a/AndroidStudioProjects/MyApplication/app/local.properties
+++ b/AndroidStudioProjects/MyApplication/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 13 11:01:38 AEST 2018
-sdk.dir=C\:\\Program Files (x86)\\Android\\android-sdk
+#Mon Aug 13 18:58:30 AEST 2018
+sdk.dir=D\:\\softwares\\adt-bundle\\adt-bundle-windows-x86-20140702\\sdk
