--- a/SecureWallet/SecureWallet/Properties/AndroidManifest.xml
+++ b/SecureWallet/SecureWallet/Properties/AndroidManifest.xml
@@ -4,5 +4,5 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.USE_FINGERPRINT" />
 	<uses-sdk android:minSdkVersion="21" />
-	<application android:allowBackup="true" android:label="@string/app_name"></application>
+	<application android:allowBackup="true" android:label="@string/app_name" android:icon="@mipmap/appicon"></application>
 </manifest>
