--- a/SecureWallet/SecureWallet/packages.config
+++ b/SecureWallet/SecureWallet/packages.config
@@ -5,10 +5,27 @@
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="monoandroid80" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.11" targetFramework="monoandroid80" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.11" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Annotations" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Compat" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.UI" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Design" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Fragment" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Transition" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v4" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Build.Download" version="0.4.9" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Auth" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Auth.Api.Phone" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Auth.Base" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
 </packages>
