--- a/SecureWallet/SecureWallet/packages.config
+++ b/SecureWallet/SecureWallet/packages.config
@@ -27,5 +27,6 @@
   <package id="Xamarin.GooglePlayServices.Auth.Base" version="60.1142.1" targetFramework="monoandroid81" />
   <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid81" />
   <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Drive" version="60.1142.1" targetFramework="monoandroid81" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
 </packages>
