--- a/SecureWallet/SecureWallet/Properties/AndroidManifest.xml
+++ b/SecureWallet/SecureWallet/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="SecureWallet.SecureWallet" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="au.com.techinnov.securewallet" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.USE_FINGERPRINT" />
-	<uses-sdk android:minSdkVersion="21" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:icon="@mipmap/appicon"></application>
 </manifest>
